<resources>
    <string name="app_name">Damego</string>

    <!-- Menu items -->
    <string name="action_settings">設定</string>

    <string name="action_save_comment">送信</string>
    <string name="action_discard_comment">破棄</string>
    <string name="action_search">検索</string>
    <string name="action_share">シェア</string>
    <string name="action_bookmark">保存する</string>
    <string name="action_unbookmark">削除</string>
    <string name="action_bookmarks">ブックマーク</string>

    <!--　Create comment　-->
    <string name="title_activity_create_comment"></string>
    <string name="comment_length_error">文字列が2～500文字以内のコメントを書いてください</string>
    <string name="comment_submitting">コメントを送信中</string>
    <string name="comment_success">コメントを作成しました。</string>
    <string name="comment_hint">コメントを書き込む</string>
    <string name="discard_comment_dialog">データをなくして戻りますか？</string>

    <!-- Comments preview -->
    <string name="comments_title">%1$sコメント</string>
    <string name="comments_view">すべてのコメントを見る</string>

    <string name="login_success">ログインしました</string>
    <string name="login_error">ログインできませんでした</string>
    <string name="register_success">Damegoへようこそ、%1$s</string>
    <string name="register">登録する</string>
    <string name="login">ログイン</string>
    <string name="username">ユーザー名</string>
    <string name="email">Eメール</string>
    <string name="password">パスワード</string>
    <string name="logout_success">ログアウトしました</string>
    <string name="logout">ログアウト</string>

    <!-- Comments -->
    <string name="comments_empty">コメントはまだありません。</string>

   <!-- Posts -->
    <string name="post_list_footer">ポストはノーモア残っている。</string>
    <string name="no_more_posts">ポストはもうありません</string>
    <string name="no_posts_found">ポストはありません</string>

    <string name="bookmark_deleted">Bookmarksから外しました</string>
    <string name="bookmark_created">Bookmarksに追加しました</string>

    <!-- General errors -->
    <string name="error_default">エラーが発生しました</string>
    <string name="error_unauthorized">ログインしてください</string>
    <string name="error_offline">現在オフラインです</string>
    <string name="error_timeout">サーバへのリクエストがタイムアウトしました</string>
    <string name="error_server">サーバに接続できません</string>

    <!-- Status messages -->
    <string name="loading_list">Loading…</string>
    <string name="empty_list">コメントはまだありません。</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="search_hint">Enter a search term...</string>
    <string name="search_error_length">\"Search term is too short!\"</string>

</resources>