<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp" android:orderInCategory="0" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_register" android:title="@string/register"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_login" android:title="@string/login"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/logout"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>