<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/fragment_specific_options">
        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:orderInCategory="0"
            android:title="@string/action_share"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_bookmark"
            android:icon="@drawable/ic_bookmark_outline_white_24dp"
            android:orderInCategory="100"
            android:title="@string/action_bookmark"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_unbookmark"
            android:icon="@drawable/ic_bookmark_white_24dp"
            android:orderInCategory="100"
            android:title="@string/action_unbookmark"
            app:showAsAction="ifRoom" />
    </group>

</menu>